[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Objects/Obj-Arrow-Idle-12x12.png" type="Texture" id=1]
[ext_resource path="res://assets/Objects/Obj-Arrow-Stuck-12x12.png" type="Texture" id=2]
[ext_resource path="res://scripts/player/arrow.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5.5, 1.5 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Texture:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Texture:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Texture:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0, 0, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Texture:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Texture:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Texture:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "stuck"
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:vframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Texture:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Texture:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[node name="Arrow" type="Area2D"]
script = ExtResource( 3 )
speed = 150

[node name="Texture" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2
vframes = 2

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.5, 0.5 )
shape = SubResource( 4 )

[node name="Notifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( 0.5, 0.5 )
scale = Vector2( 0.55, 0.15 )

[node name="Animation" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/stuck = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="Notifier2D" to="." method="_on_screen_exited"]
[connection signal="animation_finished" from="Animation" to="." method="_on_animation_finished"]
